tests/rosetta/out/C/call-a-function-11.error
cc: exit status 1
/tmp/call-a-function-11.c: In function ‘main’:
/tmp/call-a-function-11.c:54:12: error: redefinition of ‘box’
   54 |   list_int box = box;
      |            ^~~
/tmp/call-a-function-11.c:52:12: note: previous definition of ‘box’ with type ‘list_int’
   52 |   list_int box = list_int_create(1);
      |            ^~~
/tmp/call-a-function-11.c: At top level:
/tmp/call-a-function-11.c:63:5: error: redefinition of ‘main’
   63 | int main() {
      |     ^~~~
/tmp/call-a-function-11.c:43:5: note: previous definition of ‘main’ with type ‘int()’
   43 | int main() {
      |     ^~~~
