tests/rosetta/out/C/call-a-function-11.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:57Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:57Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int zeroval(int ival) {
  int x = ival;
  x = 0;
  return x;
}

int zeroptr(list_int ref) { ref.data[0] = 0; }

int main() {
  int i = 1;
  char *tmp1 = _str(i);
  char *tmp2 = concat_string("initial: ", tmp1);
  printf("%s\n", tmp2);
  int tmp = zeroval(i);
  char *tmp3 = _str(i);
  char *tmp4 = concat_string("zeroval: ", tmp3);
  printf("%s\n", tmp4);
  list_int box = list_int_create(1);
  box.data[0] = i;
  list_int box = box;
  zeroptr(box);
  i = box.data[0];
  char *tmp5 = _str(i);
  char *tmp6 = concat_string("zeroptr: ", tmp5);
  printf("%s\n", tmp6);
  printf("pointer: 0\n");
}

int main() {
  main();
  return 0;
}
